# bookmark-organiser

./: .gitignore  README.md  main.py  pyproject.toml
bookmark_organiser/: __init__.py  config.py  html_writer.py  metadata.py  models.py  organiser.py  parser.py  validator.py
tests/: conftest.py  test_html_depth.py  test_llm_retry.py  test_metadata.py  test_parse.py  test_validator.py
